# reverb

./: .gitignore  CMakeLists.txt  README.md  Reverb.jucer
Include/: Delay.h  PluginProcessor.h
Literature/: README.md
Source/: Delay.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
